--- a/assets/styles/custom-styles.css
+++ b/assets/styles/custom-styles.css
@@ -1,63 +1,34 @@
-@import url(https://fonts.googleapis.com/css?family=PT+Mono);
-@import url(https://fonts.googleapis.com/css?family=Raleway:400,100,800);
-
-body, html {
-	font-size:16px;
-	letter-spacing: .05em;
-}
-h1::first-letter,h2::first-letter,h3::first-letter,h4::first-letter,h5::first-letter,h6::first-letter { text-transform: capitalize;}
-h1 {
-	font-size: 1.375em;
-	font-weight: 600;
-	letter-spacing: .05em;
-}
-h2 {
-	font-size: 1.25rem;
-	line-height: 1.15rem;
-	letter-spacing: .05em;
-	font-weight: 600;
-}
-h3 {
-	font-size: .937em;
-	line-height: 1.4rem;
-	font-weight: normal;
-}
-/*
-=========================================
-RESETS
-=========================================
-*/
-a { text-decoration: none}
-a:hover, a.active { color: blue;}
-
-ul, li {
-	list-style: none;
-}
-input[type="text"] {
-    border: 2px solid;
-}
-input[type=submit] {
-    background: black;
-    border: 0 none;
-    cursor: pointer;
-    -webkit-border-radius: 0;
-    border-radius: 0;
-    color: white;
-}
-form > * {
-    padding: .5em;
-}
-
 /*
 =========================================
 CUSTOM STYLES
 =========================================
 */
+
+/*=======================================
+IMPORTS
+=======================================*/
+@import url(https://fonts.googleapis.com/css?family=PT+Mono);
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,100,800);
+
+/*=======================================
+RESETS
+=======================================*/
+body, html { 
+	letter-spacing: .05em;
+}
+form > * {
+    padding: .5em;
+}
+
 /*** Boxes ***/
 .content-box-1200 {
 	margin:0 0 0 3.5em;
 }
-/*** Fonts ***/
+
+
+/*=======================================
+FONTS
+=======================================*/
 .source-serif-font,
 .source-serif-font > p {
 	font-size: 16px;
@@ -79,13 +50,6 @@ CUSTOM STYLES
 /*** Menu & Footer ***/
 .logo-item {
 	position: fixed;
-	z-index: 9;
-	width: 3em;
-	height: 3em;
-	margin-top: .5em;
-}
-.menu-btn {
-	cursor: pointer;
 }
 .pac-menu {
 	position: relative;
@@ -137,61 +101,7 @@ CUSTOM STYLES
 	justify-content: space-around;
 }
 
-.menu-container {
-	position: relative;
-	box-sizing: border-box;
-}
-.main-menu-section {
-	background-color: white;
-}
-.main-menu .menu-item {
-	margin-right: 1em;
-}
-.main-menu .menu-btn {
-	border: 2px solid;
-}
-.main-menu .active .menu-btn,
-.main-menu .menu-btn.active,
-.main-menu .menu-btn:hover {
-	border: 2px solid;
-	background: black;
-	color: white;
-	border-color: black;
-} 
-.sub-menu-btn:hover,
-.sub-menu-btn.active,
-.secondary-options .menu-item:hover {
-	color: blue;
-}
-.menu-item a,
-.menu-search-item { 
-	text-transform: capitalize;
-	font-weight: 600;
-}
-.menu-item a,
-.footer-item a {
-	display: inline-block;
-	text-decoration: none;
-	box-sizing: border-box;
-}
-.menu-wrapper {
-	width: 100%;
-	z-index:2;
-	background: white;
-}
-.search-form {
-	position: relative;
-	z-index: 1;
-}
-.show-search-btn,
-.show-search-btn:before,
-.show-search-btn:after {
-	width: 2em;
-	height: 2em;
-}
-.show-search-btn p {
-	text-indent: -999ex;
-}
+
 .show-search-btn::before {
 	content: "";
 	position: absolute;
@@ -435,28 +345,40 @@ CUSTOM STYLES
 	background-image: url(https://ia600805.us.archive.org/28/items/mma_armchair_9861/9861.jpg);
 }
 .sample-image-0 {
-	background-image: url(../images/gallery/image-1.jpg);
+	background-image: url(https://ia600301.us.archive.org/14/items/mma_armchair_173/173.jpg);
 }
 .sample-image-1 {
-	background-image: url(../images/gallery/image-1.jpg);
+	background-image: url(https://ia600503.us.archive.org/28/items/mma_armchair_196848/196848.jpg);
 }
 .sample-image-2 {
-	background-image: url(../images/gallery/image-1.jpg);
+	background-image: url(https://ia600307.us.archive.org/32/items/mma_armchair_195523/195523.jpg);
 }
 .sample-image-3 {
-	background-image: url(../images/gallery/image-1.jpg);
+	background-image: url(https://ia600301.us.archive.org/2/items/mma_armchair_232178/232178.jpg);
 }
 .sample-image-4 {
-	background-image: url(../images/gallery/image-1.jpg);
+	background-image: url(https://ia600305.us.archive.org/18/items/mma_armchair_231/231.jpg);
 }
 .sample-image-5 {
-	background-image: url(../images/gallery/image-1.jpg);
+	background-image: url(https://ia600303.us.archive.org/29/items/mma_armchair_51061/51061.jpg);
 }
 .sample-image-6 {
-	background-image: url(../images/gallery/image-1.jpg);
+	background-image: url(https://ia600502.us.archive.org/11/items/mma_armchair_14321/14321.jpg);
 }
 .sample-image-7 {
-	background-image: url(../images/gallery/image-1.jpg);
+	background-image: url(https://ia600503.us.archive.org/1/items/mma_armchair_194955/194955.jpg);
+}
+.sample-image-8 {
+	background-image: url(https://ia600503.us.archive.org/15/items/mma_armchair_15389/15389.jpg);
+}
+.sample-image-9 {
+	background-image: url(https://ia600501.us.archive.org/30/items/mma_armchair_3498/3498.jpg);
+}
+.sample-image-10 {
+	background-image: url(https://ia600301.us.archive.org/5/items/mma_armchair_15297/15297.jpg);
+}
+.sample-image-11 {
+	background-image: url(https://ia800303.us.archive.org/22/items/mma_armchair_16856/16856.jpg);
 }
 /****************************
 MEDIA QUERIES
