--- a/assets/styles/custom-styles.css
+++ b/assets/styles/custom-styles.css
@@ -19,10 +19,8 @@ body, html {
 form > * {
     padding: .5em;
 }
-
-/*** Boxes ***/
-.content-box-1200 {
-	margin:0 0 0 3.5em;
+section {
+	margin-left: 3.5em;
 }
 
 
@@ -51,11 +49,11 @@ FONTS
 .logo-item {
 	position: fixed;
 }
-.pac-menu {
+/*.pac-menu {
 	position: relative;
 	background: white;
 	padding: .5em .5em 1.5em 3.5em;
-}
+}*/
 .menu-right-wrapper {
 	-webkit-justify-content: flex-end;
 	justify-content: flex-end;
