--- a/assets/styles/custom-styles.css
+++ b/assets/styles/custom-styles.css
@@ -21,8 +21,11 @@ form > * {
 }
 
 /*** Boxes ***/
-.content-box-1200 {
-	margin:0 0 0 3.5em;
+.max-width-1200 {
+	/*margin:0 0 0 3.5em;*/
+}
+section {
+	margin-left: 3.5em;
 }
 
 
@@ -54,11 +57,19 @@ FONTS
 .pac-menu {
 	position: relative;
 	background: white;
-	padding: .5em .5em 1.5em 3.5em;
+	padding: .5em 0 .5em 3.5em;
+	/*padding: .5em .5em 1.5em 3.5em;*/
+}
+.menu {
+	padding-top:.25em;
+	padding-bottom:.25em;
 }
 .menu-right-wrapper {
 	-webkit-justify-content: flex-end;
 	justify-content: flex-end;
+}
+.menu-left-wrapper .menu-item {
+	border: 2px solid;
 }
 .child-menu {
 	display: none;
